2018-07-13  Kirit Saelensminde  <kirit@felspar.com>
 * Switch `fostlib::json` to use `std::variant`.
 * Remove memoize, as it's never been used.

2018-07-12  Kirit Saelensminde  <kirit@felspar.com>
 `fostlib::nullable`, `fostlib::null_t` and `fostlib::null` are now aliases to the `std::optional` types and values.

2018-07-09  Kirit Saelensminde  <kirit@felspar.com>
 Add a logger that outputs single lines of JSON to the console.

2018-07-06  Kirit Saelensminde  <kirit@felspar.com>
 * Use guids to generate temporary file names.
 * Fix a potential problem with the pathname join function one of the paths is empty.

2018-07-05  Kirit Saelensminde  <kirit@felspar.com>
 * Fix up the library searches for `dynlink`
 * Add some missing append operation for `string`

2018-07-05  Tle Ekkul  <e.aryuth@gmail.com>
 * Fixed password hashing to use `u8view` instead of `utf8_string`
 * Fixed include for `fostlib::insert`

2018-07-03  Kirit Saelensminde  <kirit@felspar.com>
 * Use a more efficient implementation for `crypto_bytes` -- Reverted for now as the required system call header is not always available.
 * Added RIPEMD-256 cryptographic hash function.

2018-05-15  Kirit Saelensminde  <kirit@felspar.com>
 Add coercions for jcursor index value types.

2018-04-09  Kirit Saelensminde  <kirit@felspar.com>
 Add some basic base16 support.

2018-04-04  Kirit Saelensminde  <kirit@felspar.com>
 Add various base32 encoding flavours (`base32`, `base32hex` and `base32c`)

2018-03-30  Kirit Saelensminde  <kirit@felspar.com>
 Add a fork of Crypto++'s fork of tweetnacl to generate ed25519 signing key pairs.

2018-01-31  Kirit Saelensminde  <kirit@felspar.com>
 Fix bug to handle requirements for autotest libraries properly.

2018-01-12  Kirit Saelensminde  <kirit@felspar.com>
 * Removed Boost lambda and bind
 * Remove previously deprecated `fostlib::counter`.

2018-01-06  Kirit Saelensminde  <kirit@felspar.com>
 Allow the C++ version to be specified as `std-version` in the requirments.jam file.