@@ -1,4 +1,5 @@
 2018-07-13  Kirit Saelensminde  <kirit@felspar.com>
+ * Remove `fostlib::variant` as its not used.
  * Switch `fostlib::json` to use `std::variant`.
  * Remove memoize, as it's never been used.
 
